--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,9 @@ spring.jpa.hibernate.ddl-auto=update
 spring.mvc.pathmatch.matching-strategy=ant-path-matcher 
 
 drees.stacktrace = true
+
+#404 error handling
+server.error.whitelabel.enabled=false
+spring.mvc.throw-exception-if-no-handler-found=true
+spring.web.resources.add-mappings=false
+
