Added update and delete functionality to the employee system

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,7 +18,7 @@ spring.jpa.hibernate.ddl-auto=update
 
 spring.mvc.pathmatch.matching-strategy=ant-path-matcher 
 
-drees.stacktrace = true
+drees.stacktrace = false
 
 #404 error handling
 server.error.whitelabel.enabled=false
