--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,3 +26,6 @@ spring.mvc.throw-exception-if-no-handler-found=true
 spring.web.resources.add-mappings=false
 
 
+eureka.client.serviceUrl.defaultZone  = http://localhost:8761/eureka
+eureka.client.instance.preferIpAddress = true
+spring.application.name = eurekaclient
