--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,6 +26,20 @@ spring.mvc.throw-exception-if-no-handler-found=true
 spring.web.resources.add-mappings=false
 
 
+# To expose actuator apis
+management.server.port:8081
+management.endpoints.web.exposure.include=health,info,beans
+
+# To display actuator information 
+management.info.java.enabled=true
+info.app.name=Spring Actuator Example
+info.app.java.version=10
+info.app.type=Spring Boot
+info.app.description=This is my first spring boot application
+info.app.version=1.0.0
+
+
+
 eureka.client.serviceUrl.defaultZone  = http://localhost:8761/eureka
 eureka.client.instance.preferIpAddress = true
 spring.application.name = eurekaclient
