Removed user table

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,8 @@ server.port=8081
 
 # H2 database console path -> http://localhost:8081/h2-console
 spring.h2.console.enabled=true
+# To eliminate error - remote connections ('webAllowOthers') are disabled on this server.
+spring.h2.console.settings.web-allow-others=true
 
 # database path in the local file system. to persist the database
 spring.datasource.url=jdbc:h2:file:/Users/krishna/Documents/STS/temp/empDatabase
@@ -42,4 +44,4 @@ info.app.version=1.0.0
 
 eureka.client.serviceUrl.defaultZone  = http://localhost:8761/eureka
 eureka.client.instance.preferIpAddress = true
-spring.application.name = eurekaclient
+spring.application.name = eurekaclientForEmployee
