--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -45,3 +45,4 @@ info.app.version=1.0.0
 eureka.client.serviceUrl.defaultZone  = http://localhost:8761/eureka
 eureka.client.instance.preferIpAddress = true
 spring.application.name = eurekaclientForEmployee
+eureka.instance.hostname=localhost
